Fixes word count display in RTE not to overlap the toolbar items.

--- a/tool-ui/src/main/webapp/style/jquery.rte.less
+++ b/tool-ui/src/main/webapp/style/jquery.rte.less
@@ -53,7 +53,7 @@ body.rte-fullscreen {
     border-bottom: 1px solid @color-note;
     .border-top-left-radius(5px);
     .border-top-right-radius(5px);
-    padding: 3px 0 0 3px;
+    padding: 3px 60px 0 3px;
     position: relative;
     vertical-align: top;
 
